# STL-Linear

./: CHANGELOG.md  LICENSE  Parser.hs  README.md  STL-Linear.cabal  STL.cabal
benchmark/: LICENSE.txt  Main.hs
models/: Binary.stl
src/: STL.hs
src/Graphics/: Parser.hs  STL.hs  Types.hs
src/Graphics/STL/: Common.hs  Lazy.hs
test/: Spec.hs
