cabal-version:       2.0
name:                STL-Linear
version:             0.1.0
synopsis:            See README for more info
description:         See README for more info
license:             GPL-3
license-file:        LICENSE
author:              timput
maintainer:          timput@gmail.com
copyright:           2021 timput
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.STL

  build-depends:       base >= 4.12.0.0
                     , linear
                     , vector
                     , bytestring
                     , binary
                     , attoparsec
                     , scientific
                     , deepseq

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -O2

  default-language:    Haskell2010

test-suite STL-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.12.0.0
                     , STL-Linear

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -O2

  default-language:    Haskell2010

benchmark STL-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base >= 4.12.0.0
                     , gauge
                     , STL-Linear
                     -- , STL
                     , attoparsec
                     , bytestring
                     , linear
                     , binary
                     , text
                     , deepseq

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -O2

  default-language:    Haskell2010
